--- a/config.toml
+++ b/config.toml
@@ -327,11 +327,11 @@ enableEmoji = true
         pageSize = 10
         serverURL = "https://geekby-cn-waline.vercel.app/"
       [params.page.comment.valine]
-        enable = false
-        appId = ""
-        appKey = ""
-        placeholder = ""
-        avatar = "mp"
+        enable = true
+        appId = "plu3z1MnrH6WQCxFIwEav4CU-gzGzoHsz"
+        appKey = "75j3vCcHXegY7TxfAsj9ROIS"
+        placeholder = "说点什么"
+        avatar = "wavatar"
         meta= ""
         pageSize = 10
         lang = ""
@@ -339,7 +339,7 @@ enableEmoji = true
         recordIP = true
         highlight = true
         enableQQ = false
-        serverURLs = ""
+        serverURLs = "https://leancloud.geekby.cn"
         #  emoji 数据文件名称, 默认是 "google.yml"
         # ("apple.yml", "google.yml", "facebook.yml", "twitter.yml")
         # 位于 "themes/LoveIt/assets/data/emoji/" 目录
@@ -438,7 +438,7 @@ enableEmoji = true
 
   #  Cookie 许可配置
   [params.cookieconsent]
-    enable = true
+    enable = false
     # 用于 Cookie 许可横幅的文本字符串
     [params.cookieconsent.content]
       message = ""
