--- a/config.toml
+++ b/config.toml
@@ -183,7 +183,7 @@ enableEmoji = true
       #  主页显示的网站标题 (支持 HTML 格式)
       title = ""
       # 主页显示的网站副标题
-      subtitle = "天空不曾留下我的痕迹，但我已经飞过~"
+      subtitle = "九层之台，始于垒土~"
       # 是否为副标题显示打字机动画
       typeit = true
       # 是否显示社交账号
