change the blog theme to DOIt

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ hasCJKLanguage = true
 title = "geekbyの自留地"
 
 # 更改使用 Hugo 构建网站时使用的默认主题
-theme = "LoveIt"
+theme = "DoIt"
 # 是否使用 emoji 代码
 enableEmoji = true
 [menu]
@@ -96,7 +96,7 @@ enableEmoji = true
   [params.search]
     enable = true
     # 搜索引擎的类型 ("lunr", "algolia")
-    type = "lunr"
+    type = "fuse"
     # 文章内容最长索引长度
     contentLength = 4000
     # 搜索框的占位提示语
@@ -109,10 +109,17 @@ enableEmoji = true
     highlightTag = "em"
     #  是否在搜索索引中使用基于 baseURL 的绝对路径
     absoluteURL = false
-    [params.search.algolia]
-      index = ""
-      appID = ""
-      searchKey = ""
+    [params.search.fuse]
+        # DoIt 新增 | 0.2.12 https://fusejs.io/api/options.html
+        isCaseSensitive = false
+        minMatchCharLength = 2
+        findAllMatches = false
+        location = 0
+        threshold = 0.3
+        distance = 100
+        ignoreLocation = false
+        useExtendedSearch = false
+        ignoreFieldNorm = false
 
   # 页面头部导航栏配置
   [params.header]
@@ -183,7 +190,7 @@ enableEmoji = true
       #  主页显示的网站标题 (支持 HTML 格式)
       title = ""
       # 主页显示的网站副标题
-      subtitle = "九层之台，始于垒土~"
+      subtitle = "九层之台，始于垒土。骐骥一跃，不能十步~"
       # 是否为副标题显示打字机动画
       typeit = true
       # 是否显示社交账号
@@ -203,7 +210,7 @@ enableEmoji = true
   [params.social]
     GitHub = "jackbai233"
     Telegram = "@geek223"
-    Twitter = "@Jack66626505043"
+    Twitter = "@geekby1024"
     Weibo = "u/5101801783"
     Email = "hfutbj233@163.com"
     RSS = true # 
@@ -241,7 +248,7 @@ enableEmoji = true
       # 是否显示代码块的复制按钮
       copy = true
       # 默认展开显示的代码行数
-      maxShownLines = 10
+      maxShownLines = 20
     #  KaTeX 数学公式
     [params.page.math]
       enable = true
@@ -319,15 +326,8 @@ enableEmoji = true
         clientId = ""
         clientSecret = ""
       # Valine 评论系统设置
-      [params.page.comment.waline]
-        enable = true
-        # 评论框默认提示
-        placeholder = '踩踩...'
-        # 每页展示多少条评论
-        pageSize = 10
-        serverURL = "https://geekby-cn-waline.vercel.app/"
       [params.page.comment.valine]
-        enable = true
+        enable = false
         appId = "plu3z1MnrH6WQCxFIwEav4CU-gzGzoHsz"
         appKey = "75j3vCcHXegY7TxfAsj9ROIS"
         placeholder = "说点什么"
@@ -346,6 +346,22 @@ enableEmoji = true
         # 可以在你的项目下相同路径存放你自己的数据文件:
         # "assets/data/emoji/"
         emoji = ""
+      # Waline comment config (https://waline.js.org)
+      # Waline 评论系统设置 (https://waline.js.org)
+      [params.page.comment.waline]
+        enable = true
+        serverURL = "https://geekby-comment-gof863phj-jackbai233.vercel.app/"
+        visitor = true
+        emoji = ['https://cdn.jsdelivr.net/gh/walinejs/emojis/weibo', 'https://cdn.jsdelivr.net/gh/walinejs/emojis@1.0.0/bilibili']
+        meta = ['nick', 'mail', 'link']
+        requiredMeta = []
+        login = 'enable'
+        wordLimit = 0
+        pageSize = 10
+        uploadImage = false
+        highlight = true
+        mathTagSupport = false
+        commentCount = true
       # Facebook 评论系统设置
       [params.page.comment.facebook]
         enable = false
