--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # baseURL最后一定要以斜杆结尾，不然有bug
-baseURL = "https://www.geekby.cn/"
+baseURL = "https://www.geekby.cn"
 # [en, zh-cn, fr, ...] 设置默认的语言
 defaultContentLanguage = "zh-cn"
 # 网站语言, 仅在这里 CN 大写
